--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "antd": "^5.16.1",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
@@ -41,6 +42,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
